[tool.poetry]
name = "dpds-codes"
version = "0.1.0"
description = "codes of dpds"
authors = ["AminAvan <amin.avan@ontariotechu.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
