[tool.poetry]
name = "dpds-codes"
version = "0.1.0"
description = "codes of dpds"
authors = ["AminAvan <amin.avan@ontariotechu.net>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.0"
tensorflow = "2.15.0"
tensorflow-io-gcs-filesystem = "0.24.0"
scipy = "^1.14.1"
psutil = "^6.0.0"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
